--- a/portfolio/src/portfolioContainer/Home/Header/Header.css
+++ b/portfolio/src/portfolioContainer/Home/Header/Header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     height: 140px;
-    color: var(--white);
+    color: --white;
 }
 
 .header-parent{
@@ -11,13 +11,13 @@
     justify-content: space-between;
     height: 100%;
     width: 70%;
-    color: var(--white);
+    color: white;
 }
 
 .header-logo {
     font-size: 50px;
     font-family: "Poppins ExtraBold";
-    color: var(--white);
+    color: white;
 }
 
 .header-options{
@@ -33,16 +33,16 @@
 
 .header-hamburger{
     display: none;
-    color: var(--white);
+    color:white;
 }
 
 .header-option-seperator{
     margin: 0 50px 0 0;
-    color: var(--white);
+    color: white;
 }
 
 .selected-header-option{
-    color: var(--dark-orange);
+    color: #FF5823;
 }
 
 @media only screen and (max-width: 1100px) {
@@ -71,7 +71,7 @@
         height: 100vh;
         width: 100%;
         justify-content:  space-around;
-        background-color: var(--background);
+        background-color: #1f2235;
         z-index: 1000;
         opacity:  0.8;
         transition: all 0.8s ease-out;
