--- a/portfolio/src/utilities/ScreenHeading/ScreenHeading.css
+++ b/portfolio/src/utilities/ScreenHeading/ScreenHeading.css
@@ -1,4 +1,4 @@
-.header-container{
+.heading-container{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,10 +40,11 @@
     display: flex;
     position: absolute;
     justify-content: center;
+    top: -4px;
 }
 
 .seperator-blob div{ 
     width: 35px;
-    border-radius:  10px;
+    border-radius: 10px;
     background-color: var(--dark-orange);
 }
